[package]
authors = ["Zeyla Hellyer <hi@zeyla.me>"]
description = "Discord WebSocket proxy built in serenity."
edition = "2018"
homepage = "https://github.com/dabbotorg/sharder"
license = "ISC"
name = "serenity-sharder-binary"
publish = false
readme = "README.md"
repository = "https://github.com/dabbotorg/sharder.git"
version = "0.1.0"

[dependencies]
byteorder = "1"
env_logger = "0.5"
kankyo = "0.2"
log = "0.4"
parking_lot = "0.6"
serde_json = "1"
tokio = "0.1"
tungstenite = "0.6"

[dependencies.futures-preview]
features = ["compat", "tokio-compat"]
version = "0.3.0-alpha.9"

[dependencies.redis-async]
git = "https://github.com/dabbotorg/redis-async-rs"

[dependencies.serenity]
branch = "futures"
git = "https://github.com/serenity-rs/serenity"
